--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "homepage": "https://wiesherd.github.io/wrvu-analysis-tool/#",
   "dependencies": {
-    "@emotion/react": "^11.13.3",
-    "@emotion/styled": "^11.13.0",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.1.1",
     "@mui/material": "^6.1.2",
     "@testing-library/jest-dom": "^5.17.0",
@@ -13,8 +13,10 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.7",
     "chart.js": "^4.4.4",
+    "chartjs-plugin-annotation": "^3.1.0",
     "chartjs-plugin-datalabels": "^2.2.0",
     "date-fns": "^4.1.0",
+    "framer-motion": "^12.6.3",
     "papaparse": "^5.5.2",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
@@ -53,6 +55,6 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "gh-pages": "^6.2.0"
+    "gh-pages": "^6.3.0"
   }
 }
